--- a/_mixins.scss
+++ b/_mixins.scss
@@ -33,6 +33,13 @@
 									ex: @include clearfix();
 		- 	absolute position 	- arguments: top, right, bottom, left
 									ex: @include abs-pos(5px, 5px, 5px, 5px);
+		-	keyframes			- arguments: animationName
+									ex: @include keyframes(animationName) { @content };
+		-	animation			- arguments: normal shorthand
+									ex: @include animation('');
+										Can chain animations by using comma seperation.
+		- 	columns 			-arguments: $count, $gap
+									ex: @include columns($count, $gap);
 
 ********************************************************/
 
@@ -237,57 +244,129 @@
 
 
 
+/*********************************************************************************
+ ** Keyframes	   																**
+ ** @include keyframes();														**
+ **																				**
+ **																				**
+ ** http://joshbroton.com/quick-fix-sass-mixins-for-css-keyframe-animations/	**
+ *********************************************************************************/
 
-
-@mixin rem($property, $values) {
-	// Create a couple of empty lists as output buffers.
-	$font-size: $base-font-size;
-	$px-values: ();
-	$rem-values: ();
-
-	// Loop through the $values list
-	@each $value in $values {
-
-		// For each property value, if it's in rem or px, derive both rem and
-		// px values for it and add those to the end of the appropriate buffer.
-		// Ensure all pixel values are rounded to the nearest pixel.
-		@if $value == 0 or $value == 0px {
-
-			// 0 -- use it without a unit
-			$px-values: join($px-values, 0);
-			$rem-values: join($rem-values, 0);
-
-		} @else if type-of($value) == number and not unitless($value) and (unit($value) == px) {
-
-			// px value given - calculate rem value from font-size
-			$new-rem-value: $value / $font-size;
-			$px-values: join($px-values, round($value));
-			$rem-values: join($rem-values, #{$new-rem-value}rem);
-
-		} @else if type-of($value) == number and not unitless($value) and (unit($value) == "%") {
-
-			// % value given - don't add px or rem
-			$px-values: join($px-values, #{$value});
-			$rem-values: join($rem-values, #{$value});
-
-		} @else if $value == auto {
-
-			// auto - don't add px or rem
-			$px-values: join($px-values, auto);
-			$rem-values: join($rem-values, auto);
-
-		} @else {
-
-			// unitless value - use those directly as rem and calculate the px-fallback
-			$px-values: join($px-values, round($value * $font-size));
-			$rem-values: join($rem-values, #{$value}rem);
-
-		}
+	@mixin keyframes($animationName) {
+	    @-webkit-keyframes #{$animationName} {
+	        @content;
+	    }
+	    @-moz-keyframes #{$animationName} {
+	        @content;
+	    }
+	    @-o-keyframes #{$animationName} {
+	        @content;
+	    }
+	    @keyframes #{$animationName} {
+	        @content;
+	    }
 	}
 
-  // output the converted rules
-  #{$property}: $px-values;
-  #{$property}: $rem-values;
-}
+
+
+/*********************************************************************************
+ ** Animation	   																**
+ ** @include animation('');		*allows chaining with , seperation*				**
+ **																				**
+ **																				**
+ ** http://joshbroton.com/quick-fix-sass-mixins-for-css-keyframe-animations/	**
+ *********************************************************************************/
+
+	@mixin animation($animate...) {
+	    $max: length($animate);
+	    $animations: '';
+
+	    @for $i from 1 through $max {
+	        $animations: #{$animations + nth($animate, $i)};
+
+	        @if $i < $max {
+	            $animations: #{$animations + ", "};
+	        }
+	    }
+	    -webkit-animation: $animations;
+	    -moz-animation:    $animations;
+	    -o-animation:      $animations;
+	    animation:         $animations;
+	}
+
+
+
+/*********************************************************
+ ** CSS3 Columns   		  								**
+ ** @include columns($count, $gap);						**
+ *********************************************************/
+
+	@mixin columns($count: 3, $gap: 10) {
+	    -webkit-column-count: $count;
+	    -moz-column-count:    $count;
+	    column-count:         $count;
+
+	    -webkit-column-gap:   $gap;
+	    -moz-column-gap:      $gap;
+	    column-gap:           $gap;
+	}
+
+
+
+
+
+
+
+
+// @mixin rem($property, $values) {
+// 	// Create a couple of empty lists as output buffers.
+// 	$font-size: $base-font-size;
+// 	$px-values: ();
+// 	$rem-values: ();
+
+// 	// Loop through the $values list
+// 	@each $value in $values {
+
+// 		// For each property value, if it's in rem or px, derive both rem and
+// 		// px values for it and add those to the end of the appropriate buffer.
+// 		// Ensure all pixel values are rounded to the nearest pixel.
+// 		@if $value == 0 or $value == 0px {
+
+// 			// 0 -- use it without a unit
+// 			$px-values: join($px-values, 0);
+// 			$rem-values: join($rem-values, 0);
+
+// 		} @else if type-of($value) == number and not unitless($value) and (unit($value) == px) {
+
+// 			// px value given - calculate rem value from font-size
+// 			$new-rem-value: $value / $font-size;
+// 			$px-values: join($px-values, round($value));
+// 			$rem-values: join($rem-values, #{$new-rem-value}rem);
+
+// 		} @else if type-of($value) == number and not unitless($value) and (unit($value) == "%") {
+
+// 			// % value given - don't add px or rem
+// 			$px-values: join($px-values, #{$value});
+// 			$rem-values: join($rem-values, #{$value});
+
+// 		} @else if $value == auto {
+
+// 			// auto - don't add px or rem
+// 			$px-values: join($px-values, auto);
+// 			$rem-values: join($rem-values, auto);
+
+// 		} @else {
+
+// 			// unitless value - use those directly as rem and calculate the px-fallback
+// 			$px-values: join($px-values, round($value * $font-size));
+// 			$rem-values: join($rem-values, #{$value}rem);
+
+// 		}
+// 	}
+
+//   // output the converted rules
+//   #{$property}: $px-values;
+//   #{$property}: $rem-values;
+// }
 
 
