--- a/_variables.scss
+++ b/_variables.scss
@@ -19,8 +19,10 @@
 	$column: 60px;						// The column-width of your grid in pixels
 	$gutter: 20px;						// The gutter-width of your grid in pixels
 
-	$use-rems: true;					// Don't want to use REMs? Then set me to false. :(
-										// REMs don't support IE8 and below by default, use a polyfill if support is needed or set to false to use EMs.
+	// Pick your poisen.
+	$use-px: false;
+	$use-em: false;
+	$use-rem: true;					// REMs don't support IE8 and below by default, use a polyfill if support is needed or use EM or PX
 
 
 
@@ -28,18 +30,24 @@
  ** Misc Variables **
  ********************/
 
-	$em: $base-font-size / 1em;			// Shorthand for outputting EMs - don't remove or you'll have a bad time
-	$rem: $base-font-size / 1rem;		// Shorthand for outputting REMs - don't remove or you'll have a bad time
+	$px: $base-font-size / 1px;		// Shorthand for outputting PXs - don't remove or you'll have a bad time
+	$em: $base-font-size / 1em;		// Shorthand for outputting EMs - don't remove or you'll have a bad time
+	$rem: $base-font-size / 1rem;	// Shorthand for outputting REMs - don't remove or you'll have a bad time
+
 
 	// Used to add gutter via margin when inline-block is set. Since inline-block adds margin...
 	// Does the same as the grid, uses REMs or EMs respectively.
-	@if $use-rems == true {
+	@if $use-rem == true {
 
 		$col-gut: ($gutter - 4px) / $rem;
 
-	} @else if $use-rems == false {
+	} @else if $use-em == true {
 
 		$col-gut: ($gutter - 4px) / $em;
+
+	} @else if $use-px == true {
+
+		$col-gut: ($gutter - 4px) / $px;
 
 	}
 
