--- a/_grid.scss
+++ b/_grid.scss
@@ -1,62 +1,55 @@
-/*******************************************************
-
-	Blarg Front-End SCSS Framework by @Shane_Howell
-
-  -------------------
-
-	Based on Frameless Grid by Joni Korpi
-	<http://framelessgrid.com/> <http://jonikorpi.com/>
-	Licensed under CC0	<http://creativecommons.org/publicdomain/zero/1.0/>
-
-  -------------------
-
-	Import - Does not directly compile
-	@import > config.scss
-
-********************************************************/
-
-
+/**
+ * @file            _grid.scss
+ * @compiles-to     n/a
+ * @imports-to      _blarg.scss
+ * @author          Shane Howell <@shane_howell>
+ * @author          Wes Rice <@wesrice>
+ *
+ * Based on Frameless Grid by Joni Korpi
+ * <http://framelessgrid.com/> <http://jonikorpi.com/>
+ * Licensed under CC0  <http://creativecommons.org/publicdomain/zero/1.0/>
+ */
 
 /******************************************************
- ** Columns 		 								 **
+ ** Columns                                          **
  ** Auto calculates the width based on number value. **
- ** width: cols(#);                        			 **
+ ** width: cols(#);                                  **
  ******************************************************/
 
-	// Set $column and $gutter values in the _variables.scss file.
-	// If the $use-rems value is true, then output REM.
-	// Else output EM.
-	@function cols($cols:1) {
+    // Set $column and $gutter values in the _variables.scss file.
+    // If the $use-rems value is true, then output REM.
+    // Else output EM.
+    @function cols($cols:1) {
 
-		@if $use-rem == true {
+        @if $use-rem == true {
 
-			@return ($cols * ($column + $gutter) - $gutter) / $rem - .03rem;
+            @return ($cols * ($column + $gutter) - $gutter) / $rem - .03rem;
 
-		} @else if $use-em == true {
+        } @else if $use-em == true {
 
-			@return ($cols * ($column + $gutter) - $gutter) / $em - .03em;
+            @return ($cols * ($column + $gutter) - $gutter) / $em - .03em;
 
-		} @else if $use-px == true {
+        } @else if $use-px == true {
 
-			@return ($cols * ($column + $gutter) - $gutter) / $px - .03px;
+            @return ($cols * ($column + $gutter) - $gutter) / $px - .03px;
 
-		}
+        }
 
-	}
+    }
 
 
 
-	// Offset function, same method as cols.
-	// @function offset($offset:1) {
+    // Offset function, same method as cols.
+    // @function offset($offset:1) {
 
-	// 	@if $use-rems == true {
+    //  @if $use-rems == true {
 
-	// 		@return ($offset * ($column + $gutter)) / $rem - .03rem;
+    //      @return ($offset * ($column + $gutter)) / $rem - .03rem;
 
-	// 	} @else if $use-rems == false {
+    //  } @else if $use-rems == false {
 
-	// 		@return ($offset * ($column + $gutter)) / $em - .03em;
+    //      @return ($offset * ($column + $gutter)) / $em - .03em;
 
-	// 	}
+    //  }
 
-	// }
+    // }
