--- a/blarg-starter-scss/partials/_fonts.scss
+++ b/blarg-starter-scss/partials/_fonts.scss
@@ -1,11 +1,7 @@
-/*******************************************************
-
-	Blarg Front-End SCSS Framework by @Shane_Howell
-
-  -------------------
-
-	Import - Does not directly compile.
-	@import > ../main.scss
-
-********************************************************/
-
+/**
+ * @file            _fonts.scss
+ * @compiles-to     n/a
+ * @imports-to      Layout files
+ * @author          Shane Howell <@shane_howell>
+ * @author          Wes Rice <@wesrice>
+ */
