--- a/blarg-starter-scss/layouts/base.scss
+++ b/blarg-starter-scss/layouts/base.scss
@@ -27,7 +27,7 @@
  ** Media query checks for CSS3 support. Has touch support. **
  *************************************************************/
 
-    @media #{$smallest} {
+    @media #{$mq-smallest} {
 
 
 
@@ -40,7 +40,7 @@
  ** Has touch support                                 **
  *******************************************************/
 
-    @media #{$small} {
+    @media #{$mq-small} {
 
 
 
@@ -53,7 +53,7 @@
  ** Has touch support.                                      **
  *************************************************************/
 
-    @media #{$medium} {
+    @media #{$mq-medium} {
 
 
 
@@ -66,7 +66,7 @@
  ** Has touch support.                                     **
  ************************************************************/
 
-    @media #{$large} {
+    @media #{$mq-large} {
 
 
 
@@ -79,7 +79,7 @@
  ** Has touch support.                       **
  **********************************************/
 
-    @media #{$largest} {
+    @media #{$mq-largest} {
 
 
 
@@ -91,7 +91,7 @@
  ** Inherits nothing.                             **
  ***************************************************/
 
-    @media #{$retina} {
+    @media #{$mq-retina} {
 
 
 
