--- a/blarg-starter-scss/modules/footer.scss
+++ b/blarg-starter-scss/modules/footer.scss
@@ -25,7 +25,7 @@
  ** Media query checks for CSS3 support. Has touch support. **
  *************************************************************/
 
-    @media #{$smallest} {
+    @media #{$mq-smallest} {
 
 
 
@@ -38,7 +38,7 @@
  ** Has touch support                                 **
  *******************************************************/
 
-    @media #{$small} {
+    @media #{$mq-small} {
 
 
 
@@ -51,7 +51,7 @@
  ** Has touch support.                                      **
  *************************************************************/
 
-    @media #{$medium} {
+    @media #{$mq-medium} {
 
 
 
@@ -64,7 +64,7 @@
  ** Has touch support.                                     **
  ************************************************************/
 
-    @media #{$large} {
+    @media #{$mq-large} {
 
 
 
@@ -77,7 +77,7 @@
  ** Has touch support.                       **
  **********************************************/
 
-    @media #{$largest} {
+    @media #{$mq-largest} {
 
 
 
@@ -89,7 +89,7 @@
  ** Inherits nothing.                             **
  ***************************************************/
 
-    @media #{$retina} {
+    @media #{$mq-retina} {
 
 
 
