Rearranged directory structure

--- a/scss/_blarg.scss
+++ b/scss/_blarg.scss
@@ -22,6 +22,6 @@
  ** Partials **
  **************/
 
-    @import "mixins";
-    @import "media-queries";
-    @import "grid";
+    @import "partials/mixins";
+    @import "partials/media-queries";
+    @import "partials/grid";
