--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -39,6 +39,8 @@
                                         Can chain animations by using comma seperation.
         -   columns             -arguments: $count, $gap
                                     ex: @include columns($count, $gap);
+        -   dashed-border       -arguments: $dashlength, $spacelength, $borderwidth, $color, $position: top
+                                    ex: @include dashed-border($dashlength, $spacelength, $borderwidth, $color, $position: top);
 
 ********************************************************/
 
@@ -311,7 +313,20 @@
     }
 
 
+/**************************************************************************************************
+ ** CSS3 Dashed Border                                                                           **
+ ** @include dashed-border($dashlength, $spacelength, $borderwidth, $color, $position: top);     **
+ **                                                                                              **
+ ** http://thephuse.com/development/customizing-your-dashed-and-dotted-borders-in-css3/          **
+ **************************************************************************************************/
 
+    @mixin dashed-border($dashlength, $spacelength, $borderwidth, $color, $position: top) {
+        $per: percentage($dashlength / ($dashlength + $spacelength));
+        background-image: linear-gradient(to right, $color 0%, $color $per, rgba(0, 0, 0, 0) $per);
+        background-position: 0 $position;
+        background-size: ($dashlength + $spacelength) $borderwidth;
+        background-repeat: repeat-x;
+    }
 
 
 
