--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -11,34 +11,12 @@
     Mixins Available:
         -   em                  - arguments: #px
                                     ex: font-size: em(12px);
-        -   box-sizing          - arguments: content-box | border-box | inherit
-                                    ex: @include box-sizing(border-box);
-        -   border-radius       - arguments: #px
-                                    ex: @include border-radius(5px);
         -   background-gradient - arguments: #startColor, #endColor
-                                    ex: @include background-gradient(#fff, #ff0);
-        -   box-shadow          - arguments: x, y, blur, color, inset (defaults to false)
-                                    ex: @include box-shadow(2px, 3px, 5px, #ff0);
-        -   opacity             - arguments: #
-                                    ex: @include opacity(0.1);
-        -   rotate              - arguments: #, m11, m12, m21, m22
-                                    M values not required but advised for IE support, calc: http://www.boogdesign.com/examples/transforms/matrix-calculator.html
-                                    ex: @include rotate(20, 0.93969262, -0.34202014, 0.34202014, 0.93969262);
-        -   transform           - arguments: null
-                                    ex: @include transform(scale(2, 0.5)); , any transform value can be used
-        -   transition          - arguments: what, time, easing (ease-in-out = default), delay (default = 0)
-                                    ex: @include transition(all, 1s, ease-in-out, 1s);
+                                    ex: @include background-gradient(#fff, #ff0);        
         -   clearfix            - arguments: null
                                     ex: @include clearfix();
         -   absolute position   - arguments: top, right, bottom, left
                                     ex: @include abs-pos(5px, 5px, 5px, 5px);
-        -   keyframes           - arguments: animationName
-                                    ex: @include keyframes(animationName) { @content };
-        -   animation           - arguments: normal shorthand
-                                    ex: @include animation('');
-                                        Can chain animations by using comma seperation.
-        -   columns             -arguments: $count, $gap
-                                    ex: @include columns($count, $gap);
         -   dashed-border       -arguments: $dashlength, $spacelength, $borderwidth, $color, $position: top
                                     ex: @include dashed-border($dashlength, $spacelength, $borderwidth, $color, $position: top);
         -   vertical-align      -arguments: null
@@ -62,40 +40,6 @@
     }
 
 
-
-/*****************************************************
- ** Box-sizing, it'll make your life easier.        **
- ** content-box | border-box | inherit              **
- ** @include box-sizing();                          **
- **                                                 **
- **                                                 **
- ** https://github.com/matthieua/sass-css3-mixins   **
- *****************************************************/
-
-    @mixin box-sizing($type: border-box) {
-      -webkit-box-sizing: $type;
-         -moz-box-sizing: $type;
-              box-sizing: $type;
-    }
-
-
-
-/**********************************
- ** Border-radius                **
- ** @include border-radius(#px); **
- **********************************/
-
-    @mixin border-radius($radius) {
-        -webkit-background-clip: padding-box;
-           -moz-background-clip: padding-box;
-                background-clip: padding-box;
-        -webkit-border-radius: $radius;
-           -moz-border-radius: $radius;
-                border-radius: $radius;
-    }
-
-
-
 /*****************************************************
  ** Background Gradient                             **
  ** @include background-gradient();                 **
@@ -113,95 +57,6 @@
         background-image:      -o-linear-gradient(top, $startColor, $endColor);
         background-image:         linear-gradient(top, $startColor, $endColor);
         filter:            progid:DXImageTransform.Microsoft.gradient(startColorStr=$startColor, EndColorStr=$endColor);
-    }
-
-
-
-/***************************************************************
- ** Box Shadow                                                **
- ** @include box-shadow(x, y, blur, color, inset true/false); **
- **                                                           **
- **                                                           **
- ** https://github.com/matthieua/sass-css3-mixins             **
- ***************************************************************/
-
-    @mixin box-shadow($x: 2px, $y: 2px, $blur: 5px, $color: rgba(0,0,0,.4), $inset: null) {
-        -webkit-box-shadow: $inset $x $y $blur $color;
-           -moz-box-shadow: $inset $x $y $blur $color;
-                box-shadow: $inset $x $y $blur $color;
-    }
-
-
-
-/*****************************************************
- ** Opacity                                         **
- ** @include opacity();                             **
- **                                                 **
- **                                                 **
- ** https://github.com/matthieua/sass-css3-mixins   **
- *****************************************************/
-
-    @mixin opacity($opacity) {
-        -khtml-opacity: $opacity;
-          -moz-opacity: $opacity;
-               opacity: $opacity;
-            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" + ($opacity * 100) + ")";
-                filter: unquote("alpha(opacity=#{$opacity * 100})");
-    }
-
-
-
-/*****************************************************
- ** Rotate                                          **
- ** @include rotate();                              **
- **                                                 **
- **                                                 **
- ** https://github.com/matthieua/sass-css3-mixins   **
- *****************************************************/
-
-    @mixin rotate($deg: 0, $m11: 0, $m12: 0, $m21: 0, $m22: 0) {
-        -webkit-transform: rotate($deg + deg);
-           -moz-transform: rotate($deg + deg);
-            -ms-transform: rotate($deg + deg);
-             -o-transform: rotate($deg + deg);
-                transform: rotate($deg + deg);
-        filter: progid:DXImageTransform.Microsoft.Matrix(
-                M11=$m11, M12=$m12,M21=$m21, M22=$m22, sizingMethod='auto expand');
-        zoom: 1;
-    }
-
-
-
-/*****************************************************
- ** Transform                                       **
- ** @include transform(value);                      **
- **                                                 **
- **                                                 **
- ** https://github.com/matthieua/sass-css3-mixins   **
- *****************************************************/
-
-    @mixin transform($value) {
-        -webkit-transform: $value;
-           -moz-transform: $value;
-                transform: $value;
-    }
-
-
-
-/*****************************************************
- ** Transition                                      **
- ** @include transition(what, time, easing, delay)  **
- **                                                 **
- **                                                 **
- ** https://github.com/matthieua/sass-css3-mixins   **
- *****************************************************/
-
-    @mixin transition($what, $length, $easing: ease-in-out, $delay: 0) {
-        -webkit-transition: $what $length $easing $delay;
-           -moz-transition: $what $length $easing $delay;
-            -ms-transition: $what $length $easing $delay;
-             -o-transition: $what $length $easing $delay;
-                transition: $what $length $easing $delay;
     }
 
 
@@ -228,7 +83,6 @@
     }
 
 
-
 /*****************************************************************
  ** Absolute Position                                           **
  ** @include abs-pos(t, r, b, l);                               **
@@ -238,80 +92,11 @@
  *****************************************************************/
 
     @mixin abs-pos($top: auto, $right: auto, $bottom: auto, $left: auto) {
-      top: $top;
-      right: $right;
-      bottom: $bottom;
-      left: $left;
-      position: absolute;
-    }
-
-
-
-/*********************************************************************************
- ** Keyframes                                                                   **
- ** @include keyframes();                                                       **
- **                                                                             **
- **                                                                             **
- ** http://joshbroton.com/quick-fix-sass-mixins-for-css-keyframe-animations/    **
- *********************************************************************************/
-
-    @mixin keyframes($animationName) {
-        @-webkit-keyframes #{$animationName} {
-            @content;
-        }
-        @-moz-keyframes #{$animationName} {
-            @content;
-        }
-        @-o-keyframes #{$animationName} {
-            @content;
-        }
-        @keyframes #{$animationName} {
-            @content;
-        }
-    }
-
-
-
-/*********************************************************************************
- ** Animation                                                                   **
- ** @include animation('');     *allows chaining with , seperation*             **
- **                                                                             **
- **                                                                             **
- ** http://joshbroton.com/quick-fix-sass-mixins-for-css-keyframe-animations/    **
- *********************************************************************************/
-
-    @mixin animation($animate...) {
-        $max: length($animate);
-        $animations: '';
-
-        @for $i from 1 through $max {
-            $animations: #{$animations + nth($animate, $i)};
-
-            @if $i < $max {
-                $animations: #{$animations + ", "};
-            }
-        }
-        -webkit-animation: $animations;
-        -moz-animation:    $animations;
-        -o-animation:      $animations;
-        animation:         $animations;
-    }
-
-
-
-/*********************************************************
- ** CSS3 Columns                                        **
- ** @include columns($count, $gap);                     **
- *********************************************************/
-
-    @mixin columns($count: 3, $gap: 10) {
-        -webkit-column-count: $count;
-        -moz-column-count:    $count;
-        column-count:         $count;
-
-        -webkit-column-gap:   $gap;
-        -moz-column-gap:      $gap;
-        column-gap:           $gap;
+        top: $top;
+        right: $right;
+        bottom: $bottom;
+        left: $left;
+        position: absolute;
     }
 
 
@@ -346,6 +131,196 @@
                 transform: translateY(-50%);
     }
 
+
+
+/*****************************************************
+ ** Box-sizing, it'll make your life easier.        **
+ ** content-box | border-box | inherit              **
+ ** @include box-sizing();                          **
+ **                                                 **
+ **                                                 **
+ ** https://github.com/matthieua/sass-css3-mixins   **
+ *****************************************************/
+
+    // @mixin box-sizing($type: border-box) {
+    //   -webkit-box-sizing: $type;
+    //      -moz-box-sizing: $type;
+    //           box-sizing: $type;
+    // }
+
+
+
+/**********************************
+ ** Border-radius                **
+ ** @include border-radius(#px); **
+ **********************************/
+
+    // @mixin border-radius($radius) {
+    //     -webkit-background-clip: padding-box;
+    //        -moz-background-clip: padding-box;
+    //             background-clip: padding-box;
+    //     -webkit-border-radius: $radius;
+    //        -moz-border-radius: $radius;
+    //             border-radius: $radius;
+    // }
+
+
+
+/***************************************************************
+ ** Box Shadow                                                **
+ ** @include box-shadow(x, y, blur, color, inset true/false); **
+ **                                                           **
+ **                                                           **
+ ** https://github.com/matthieua/sass-css3-mixins             **
+ ***************************************************************/
+
+    // @mixin box-shadow($x: 2px, $y: 2px, $blur: 5px, $color: rgba(0,0,0,.4), $inset: null) {
+    //     -webkit-box-shadow: $inset $x $y $blur $color;
+    //        -moz-box-shadow: $inset $x $y $blur $color;
+    //             box-shadow: $inset $x $y $blur $color;
+    // }
+
+
+
+/*****************************************************
+ ** Opacity                                         **
+ ** @include opacity();                             **
+ **                                                 **
+ **                                                 **
+ ** https://github.com/matthieua/sass-css3-mixins   **
+ *****************************************************/
+
+    // @mixin opacity($opacity) {
+    //     -khtml-opacity: $opacity;
+    //       -moz-opacity: $opacity;
+    //            opacity: $opacity;
+    //         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" + ($opacity * 100) + ")";
+    //             filter: unquote("alpha(opacity=#{$opacity * 100})");
+    // }
+
+
+
+/*****************************************************
+ ** Rotate                                          **
+ ** @include rotate();                              **
+ **                                                 **
+ **                                                 **
+ ** https://github.com/matthieua/sass-css3-mixins   **
+ *****************************************************/
+
+    // @mixin rotate($deg: 0, $m11: 0, $m12: 0, $m21: 0, $m22: 0) {
+    //     -webkit-transform: rotate($deg + deg);
+    //        -moz-transform: rotate($deg + deg);
+    //         -ms-transform: rotate($deg + deg);
+    //          -o-transform: rotate($deg + deg);
+    //             transform: rotate($deg + deg);
+    //     filter: progid:DXImageTransform.Microsoft.Matrix(
+    //             M11=$m11, M12=$m12,M21=$m21, M22=$m22, sizingMethod='auto expand');
+    //     zoom: 1;
+    // }
+
+
+
+/*****************************************************
+ ** Transform                                       **
+ ** @include transform(value);                      **
+ **                                                 **
+ **                                                 **
+ ** https://github.com/matthieua/sass-css3-mixins   **
+ *****************************************************/
+
+    // @mixin transform($value) {
+    //     -webkit-transform: $value;
+    //        -moz-transform: $value;
+    //             transform: $value;
+    // }
+
+
+
+/*****************************************************
+ ** Transition                                      **
+ ** @include transition(what, time, easing, delay)  **
+ **                                                 **
+ **                                                 **
+ ** https://github.com/matthieua/sass-css3-mixins   **
+ *****************************************************/
+
+    // @mixin transition($what, $length, $easing: ease-in-out, $delay: 0) {
+    //     -webkit-transition: $what $length $easing $delay;
+    //        -moz-transition: $what $length $easing $delay;
+    //         -ms-transition: $what $length $easing $delay;
+    //          -o-transition: $what $length $easing $delay;
+    //             transition: $what $length $easing $delay;
+    // }
+
+
+
+/*********************************************************************************
+ ** Keyframes                                                                   **
+ ** @include keyframes();                                                       **
+ **                                                                             **
+ **                                                                             **
+ ** http://joshbroton.com/quick-fix-sass-mixins-for-css-keyframe-animations/    **
+ *********************************************************************************/
+
+    // @mixin keyframes($animationName) {
+    //     @-webkit-keyframes #{$animationName} {
+    //         @content;
+    //     }
+    //     @-moz-keyframes #{$animationName} {
+    //         @content;
+    //     }
+    //     @-o-keyframes #{$animationName} {
+    //         @content;
+    //     }
+    //     @keyframes #{$animationName} {
+    //         @content;
+    //     }
+    // }
+
+
+
+/*********************************************************************************
+ ** Animation                                                                   **
+ ** @include animation('');     *allows chaining with , seperation*             **
+ **                                                                             **
+ **                                                                             **
+ ** http://joshbroton.com/quick-fix-sass-mixins-for-css-keyframe-animations/    **
+ *********************************************************************************/
+
+    // @mixin animation($animate...) {
+    //     $max: length($animate);
+    //     $animations: '';
+
+    //     @for $i from 1 through $max {
+    //         $animations: #{$animations + nth($animate, $i)};
+
+    //         @if $i < $max {
+    //             $animations: #{$animations + ", "};
+    //         }
+    //     }
+    //     -webkit-animation: $animations;
+    //     -moz-animation:    $animations;
+    //     -o-animation:      $animations;
+    //     animation:         $animations;
+    // }
+
+
+
+/*********************************************************
+ ** CSS3 Columns                                        **
+ ** @include columns($count, $gap);                     **
+ *********************************************************/
+
+    // @mixin columns($count: 3, $gap: 10) {
+    //     -webkit-column-count: $count;
+    //     -moz-column-count:    $count;
+    //     column-count:         $count;
+
+    //     -webkit-column-gap:   $gap;
+    //     -moz-column-gap:      $gap;
+    //     column-gap:           $gap;
+    // }
 
 
 
